# raise-hand-ai

./: .eslintrc  .gitignore  657.js  657.js.LICENSE.txt  759.js  Cargo.toml  README.md  cspell.json  index.html  main.js  main.js.LICENSE.txt  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
.github/workflows/: deploy.yaml  lint.yml
js/: index.css  index.jsx  main.js
src/: App.tsx  CameraSuccess.tsx  CanCamera.tsx  Canvas.tsx  ChooseCamera.tsx  Detector.tsx  HandRaised.tsx  VideoContext.ts  VideoPromise.ts  WorkerToPage.ts  areHandsAboveHead.ts  cleanupAnimationFrame.ts  config.ts  device_id_context.rs  drawPoses.ts  draw_poses.rs  flip_horizontal.rs  get_set.rs  handMap.ts  hand_raised.rs  index.css  index.tsx  isHandRaised.ts  isUnique.ts  lib.rs  media_device_info.rs  media_stream.rs  media_stream_track.rs  mobxMediaDevices.ts  quadratic_root.rs  rect_in_sliced_circle.rs  repeatedAnimationFrame.ts  sideNames.ts  side_map.rs  side_maps.rs  switchCamera.ts  types.d.ts  useDateNow.ts  use_future.rs  use_future2.rs  (+4 more)
src/canvas/: Canvas.tsx  Heading.tsx  Scene.ts  SceneFns.ts  SetScene.ts  State.ts  StateData.ts  TickInput.ts  sceneMap.ts
src/canvas/resizeCanvas/: Input.ts  resizeCanvas.ts
src/canvas/sceneFns/: AfterCalibrateBottomCornerData.ts  AfterCalibrateTopCornerData.ts  calibrateBottomCornerFns.tsx  calibrateTopCornerFns.tsx  confirmBottomCornerFns.tsx  confirmHandSceneFns.tsx  confirmTopCornerFns.tsx  getShoulderPosition.ts  raiseHandSceneFns.tsx
src/canvas/usePlayPromise/: usePlayPromise.ts
src/canvas/usePlayPromiseAndAutoResizeCanvas/: Input.ts  (+1 more)
src/detector/: Detector.tsx  Props.ts
src/dotPlacer/: Data.ts  OnPlace.ts  Position.ts  cleanup.ts  create.ts  draw.ts  drawWithPose.ts  drawWithPosition.ts  tick.ts
src/drawCalibrationBox/: Input.ts  drawCalibrationBox.ts
src/fixedHeightMessage/: FixedHeightMessage.tsx  Props.ts
src/handYesNo/: Data.ts  HandYesNo.tsx  NoSound.tsx  OnResult.ts  Props.ts  YesSound.tsx  cleanup.ts  create.ts  resetTimeout.ts  tick.ts
src/hand_raised/: camera_context.rs  camera_data.rs  can_camera.rs  use_camera.rs
src/raiseHandProgress/: Props.ts  RaiseHandProgress.tsx  Side.ts
src/warningFlash/: Props.ts  WarningFlash.tsx
(+36 files in other folders)
