# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = "0.1.5"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"
serde-wasm-bindgen = "0.6.1"
serde = "1.0.193"
aspect-fit = "0.1.0"
wasm-repeated-animation-frame = "0.1.1"
wasm-tensorflow-models-pose-detection = "0.5.0"
wasm-tensorflow-tfjs-core = "0.1.1"
wasm-react = "0.6.0"
coloriz = "0.2.0"
average = "0.14.1"
real_float = "0.3.0"
async-channel = "2.1.1"
lazy_static = "1.4.0"
serde_json = "1.0.108"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
  "console",
  "Navigator",
  "MediaDevices",
  "Window",
  "MediaStreamConstraints",
  "MediaTrackConstraints",
  "EventTarget",
  "HtmlVideoElement",
  "HtmlCanvasElement",
  "HtmlDivElement",
  "Element",
  "HtmlElement",
  "MediaStream",
  "MediaStreamTrack",
  "MediaTrackSettings",
  "ResizeObserver",
  "ResizeObserverEntry",
  "CanvasRenderingContext2d",
  "Storage",
]

[dependencies.fps_counter]
version = "3.0.0"
features = ["wasm-bindgen"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.34"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4.34"
